@@ -1,6 +1,8 @@
 
 * SVN *
 
+* Check syntax of recipes. Provided by Mathias Meyer
+
 * Ajax-Preview on recipe edit. Provided by Mathias Meyer
 
 * Update Capistrano to 2.2.0 and Net::SFTP to 1.1.1
